--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "private": true,
+  "scripts": {
+    "start": "./node_modules/.bin/iced app.iced"
+  },
   "dependencies": {
     "discordie": "^0.6.2",
-    "log4js": "^0.6.36"
+    "log4js": "^0.6.36",
+    "redis": "^2.6.0-2"
   },
   "devDependencies": {
     "iced-coffee-script": "^108.0.11"
