--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "discordie": "^0.6.2",
     "log4js": "^0.6.36",
-    "redis": "^2.6.0-2"
+    "redis": "^2.6.0-2",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "iced-coffee-script": "^108.0.11"
