--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "discordie": "^0.6.2",
     "log4js": "^0.6.36",
     "redis": "^2.6.0-2",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "twitter": "^1.3.0"
   },
   "devDependencies": {
     "iced-coffee-script": "^108.0.11"
