--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "start": "echo run './node_modules/.bin/iced app.iced'. Letting npm do it results in weird signal catching, dont like it"
   },
   "dependencies": {
+    "config": "^1.21.0",
     "discordie": "^0.6.2",
+    "js-yaml": "^3.6.1",
     "log4js": "^0.6.36",
     "redis": "^2.6.0-2",
     "request": "^2.72.0",
